--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,14 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  /* --ifm-color-primary: #25c2a0; */
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #c75bf0;
+  --ifm-color-primary-dark: #bd3ded;
+  --ifm-color-primary-darker: #b72eec;
+  --ifm-color-primary-darkest: #9f13d4;
+  --ifm-color-primary-light: #d179f3;
+  --ifm-color-primary-lighter: #d788f4;
+  --ifm-color-primary-lightest: #e6b6f8;
   --ifm-code-font-size: 95%;
 }
 
