--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,10 +41,14 @@
   color: #6791ba;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 380px) {
+  .content {
+    margin-top: 100px;
+  }
   .blurb {
     padding: 0;
-    width: 50%;
+    width: 80%;
+    font-size: 16px;
     margin: 0;
     text-align: center;
   }
